<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrationActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/_registration"
        android:textAlignment="center"
        android:textColor="@color/ClassicColor"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/regEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/_email"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/regPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:layout_marginEnd="32dp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:autofillHints="password"
        android:hint="@string/_password"
        />

    <EditText
        android:id="@+id/regName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:hint="@string/_name"
        android:textColor="@color/black"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:autofillHints="name"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/regSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:textColor="@color/black"
        android:hint="@string/_surname"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:inputType="textPersonName"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/regAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:padding="8dp"
        android:hint="@string/_age"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:layout_marginEnd="32dp"
        android:inputType="number"
        android:autofillHints="" />

    <Button
        android:id="@+id/regSign"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/ClassicColor"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/_sign" />

    <ProgressBar
        android:id="@+id/progressBarRegistration"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_marginTop="140dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>

</LinearLayout>