<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="230dp"
        android:text="@string/_messenger"
        android:textColor="@color/ClassicColor"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:hint="@string/_email"
        android:textColor="@color/black"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:hint="@string/_password"
        android:textColor="@color/black"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"/>

    <Button
        android:id="@+id/buttonSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/ClassicColor"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/_sign" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewRegistration"
            android:layout_width="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_height="wrap_content"
            android:text="@string/_registration" />

        <TextView
            android:id="@+id/textViewReset"
            android:layout_width="match_parent"
            android:gravity="end"
            android:lines="1"
            android:layout_marginEnd="32dp"
            android:layout_height="wrap_content"
            android:text="@string/_reset"
            />

    </RadioGroup>

    <ProgressBar
        android:id="@+id/progressBarMain"
        android:visibility="invisible"
        style="?android:attr/progressBarStyle"
        android:layout_marginTop="180dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>