<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ClassicColor"
    tools:context=".MessagesActivity">

    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fontFamily="arial"
        android:padding="16dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/recyclerMessages"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Вася Пупкин" />

    <ImageView
        android:id="@+id/statusMes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textViewHeader"
        app:layout_constraintEnd_toEndOf="@+id/textViewHeader"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewHeader"
        app:layout_constraintVertical_bias="0.53"
        app:srcCompat="@android:drawable/presence_online"
        android:contentDescription="@string/_sign" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerMessages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeader"
        tools:itemCount="1"
        tools:listitem="@layout/item_mymessage" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerMessages"
        app:layout_constraintVertical_bias="1.0">
    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/_writemessage"
        android:padding="8dp"
        android:autofillHints=""
        android:inputType="textMultiLine" />


    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/imageViewSend"
        android:layout_width="wrap_content"
        app:layout_constraintHorizontal_bias="0.99"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/scrollView"
        app:layout_constraintTop_toBottomOf="@+id/recyclerMessages"
        app:srcCompat="@android:drawable/ic_menu_send"
        android:contentDescription="@string/_send" />

</androidx.constraintlayout.widget.ConstraintLayout>